# tridsolver

./: .clang-format  .cmake-format.yaml  README
apps/adi/: AUTHORS  CMakeLists.txt  Makefile  README
apps/adi/src/: adi_acc.c  adi_acc_libtrid.c  adi_acc_libtrid.cpp  adi_acc_wrapper.cu  adi_cpu.cpp  adi_cpu.h  adi_cuda.cu  adi_mpi.h  adi_mpi_cpu.cpp  adi_mpi_cuda.cu  adi_orig.c  compare.c  preproc.cu  preproc.hpp  preproc_mpi.hpp  preproc_mpi_cuda.hpp  print_array.c
apps/adi/tools/: run_adi_cpu.sh  run_adi_mkl.sh  run_adi_phi_native.sh  run_adi_phi_native_mkl.sh  run_adi_phi_offload.sh  run_adi_phi_offload_mkl.sh  sweep.sh  sweep2.sh  sweep2_y.sh  sweep_all.sh  validate.sh
apps/blktrid/: AUTHORS  CMakeLists.txt  README
apps/blktrid/src/: blktrid.cpp  transpose.h
apps/blktrid/tools/: run_blktrid_cpu.sh  run_blktrid_cpu_mkl.sh  run_blktrid_mic.sh  run_blktrid_mic_mkl.sh  sweep.sh  sweep_all.sh  validate_solve.m
block/: AUTHORS  CMakeLists.txt  Makefile_old  README
block/include/: blktrid_common.h  blktrid_cpu.h  blktrid_gpu.h  blktrid_util.h  cutil_inline.h  params.h
block/src/: blktrid_cpu.cpp  blktrid_gpu.cu  blktrid_gpu.cuh
scalar/: AUTHORS  CMakeLists.txt  Makefile_old  README
scalar/cmake/: CUDA_ARCH.cmake  Config.cmake.in
scalar/include/: cuda_timing.h  cutil_inline.h  timer.hpp  timing.h  trid_common.h  trid_cpu.h  trid_cuda.h  trid_mpi_cpu.h  trid_mpi_cpu.hpp  trid_mpi_cuda.hpp  trid_mpi_simd_constants.h  trid_mpi_solver_params.hpp  trid_params.h  trid_simd.h  trid_util.h  tridsolver.h
scalar/src/acc/: trid_x_acc.hpp  trid_y_acc.hpp  trid_z_acc.hpp
scalar/src/cpu/: CMakeLists.txt  timing.cpp  transpose.hpp  trid_cpu.cpp  trid_inplace_transpose.hpp  trid_mpi_cpu.cpp  trid_mpi_cpu.hpp  trid_mpi_cpu_lh.hpp  trid_phi.hpp
scalar/src/cuda/: CMakeLists.txt  cuda_shfl.h  cuda_timing.cu  helper_math.h  trid_cuda.cu  trid_cuda_mpi.cu  trid_cuda_mpi_pcr.hpp  trid_cusparse.hpp  trid_iterative_mpi.hpp  trid_linear.hpp  trid_linear_mpi.hpp  trid_linear_mpi_reg.hpp  trid_linear_mpi_reg16_float4.hpp  trid_linear_mpi_reg8_double2.hpp  trid_linear_reg.hpp  trid_linear_reg16_float4.hpp  trid_linear_reg8_double2.hpp  trid_linear_reg_common.hpp  trid_linear_shared.hpp  trid_mpi_common.hpp  trid_mpi_helper.hpp  trid_strided_multidim.hpp  trid_strided_multidim_mpi.hpp  trid_thomaspcr.hpp  trid_thomaspcr_large.hpp  trid_thomaspcr_small.h
scalar/src/cuda/generics/generics/: shfl.h
scalar/src/cuda/generics/test/: ldg  shfl
scalar/test/: CMakeLists.txt  catch_mpi_main.cpp  catch_mpi_outputs.hpp  catch_utils.hpp  cpu_mpi_wrappers.hpp  cuda_mpi_wrappers.hpp  cuda_utils.hpp  gen_testcases.py  performance_test.cpp  performance_test.cu  test_cpu.cpp  test_cpu_mpi.cpp  test_cpu_strict_access.cpp  test_cuda.cu  test_cuda_mpi.cu  utils.hpp
scalar/test/files/: one_dim_large  one_dim_small  two_dim_large_horiz  two_dim_large_solve0  two_dim_large_solve1  two_dim_large_vertic  two_dim_small_horiz  two_dim_small_solve0  two_dim_small_solve1  two_dim_small_vertic
